; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_rdpsnd.c_rdpsnd_send_completion.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_rdpsnd.c_rdpsnd_send_completion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RDPSND_COMPLETION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rdpsnd_send_completion(i32* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* @RDPSND_COMPLETION, align 4
  %10 = call i32 @rdpsnd_init_packet(i32* %8, i32 %9, i32 4)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i64, i64* %5, align 8
  %13 = add nsw i64 %12, 50
  %14 = call i32 @out_uint16_le(i32 %11, i64 %13)
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @out_uint8(i32 %15, i32 %16)
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @out_uint8(i32 %18, i32 0)
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @s_mark_end(i32 %20)
  %22 = load i32*, i32** %4, align 8
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @rdpsnd_send(i32* %22, i32 %23)
  ret void
}

declare dso_local i32 @rdpsnd_init_packet(i32*, i32, i32) #1

declare dso_local i32 @out_uint16_le(i32, i64) #1

declare dso_local i32 @out_uint8(i32, i32) #1

declare dso_local i32 @s_mark_end(i32) #1

declare dso_local i32 @rdpsnd_send(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
